--- a/index.html
+++ b/index.html
@@ -5,98 +5,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайту-->
-    <header>
-      <a href="">WebStudio</a>
+    <header class="page-header">
+      <a href="" class="link"
+        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+      >
+      <!-- Site nav -->
       <nav>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!--Герой-->
-      <section>
-        <h1>Ефективні рішення для <br />вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для <br />вашого бізнесу</h1>
+        <button type="button" class="button primary">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Наші переваги</h2>
-        <ul>
+      <!--Наші переваги-->
+      <section class="section">
+        <h2 class="section-title">Наші переваги</h2>
+        <ul class="list">
           <li>
-            <h3>Увага до деталей</h3>
+            <h3 class="section-title">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="section-title">Пунктуальність</h3>
+            <p>Завдання організації, обливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3 class="section-title">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h3 class="section-title">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <!-- Work -->
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="list">
           <li><img src="images/img_1.jpg" alt="клавіатура" width="370" /></li>
           <li><img src="images/img_2.jpg" alt="телефон" width="370" /></li>
           <li><img src="images/img_3.jpg" alt="планшет" width="370" /></li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <!-- Team -->
+      <section class="about-team">
+        <h2 class="team">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="images/img1_1.jpg" alt="Фото Ігор" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-title">Ігор Дем'яненко</h3>
+            <p lang="en" class="team-proffesion"></p>Product Designer</p>
           </li>
           <li>
             <img src="images/img2_1.jpg" alt="Фото Ольга" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-title">Ольга Рєпіна</h3>
+            <p lang="en" class="team-proffesion"></p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/img3_1.jpg" alt="Фото Микола" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-title">Микола Тарасов</h3>
+            <p lang="en" class="team-proffesion"></p>Marketing</p>
           </li>
           <li>
             <img src="images/img4_1.jpg" alt="Фото Михайло" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-title">Михайло Єрмаков</h3>
+            <p lang="en" class="team-proffesion"></p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>
-        <ul>
+    <!--Footer-->
+    <footer class="page-footer">
+      <a href="" class="link"
+        ><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a
+      >
+
+      <address class="address">
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/cSazSaJ8c9VCCnmr8"
               target="_blank"
               rel="noopener noreferrer"
-              >Київ, пр-т Лесі Українки, 26
+              class="address-location"
+              >м.Київ, пр-т Лесі Українки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
