upgrade css/styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,99 +14,99 @@
   <body>
     <!--Шапка сайту-->
     <header class="page-header">
-      <a href="" class="link"
-        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
-      >
+      <a href="" class="link web">Web<span class="logo-studio">Studio</span></a>
+      <!-- Site nav -->
       <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
+        <ul class="list">
+          <li><a href="./index.html" class="link site-nav">Студія</a></li>
           <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="" class="link site-nav">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contact list">
-        <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      <!-- Contact -->
+      <ul class="list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link contact">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section class="filter">
+      <section>
         <h1>Наше портфоліо</h1>
-        <ul class="filter list">
-          <li><button type="button" class="button filter link">Усі</button></li>
-          <li><button type="button" class="button simple link">Веб-сайти</button></li>
-          <li><button type="button" class="button simple link">Додатки</button></li>
-          <li><button type="button" class="button simple link">Дизайн</button></li>
-          <li><button type="button" class="button simple link">Маркетинг</button></li>
+        <ul class="list">
+          <li><button type="button" class="button filter">Усі</button></li>
+          <li><button type="button" class="button simple">Веб-сайти</button></li>
+          <li><button type="button" class="button simple">Додатки</button></li>
+          <li><button type="button" class="button simple">Дизайн</button></li>
+          <li><button type="button" class="button simple">Маркетинг</button></li>
         </ul>
-        <ul class="portfolio list">
+        <ul class="list">
           <li>
             <img src="images/img_techno.jpg" alt="технокряк" width="370" />
-            <h2 class="title">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
+            <h2 class="name-portfolio">Технокряк</h2>
+            <p class="text-portfolio">Веб-сайт</p>
           </li>
           <li>
             <img src="images/img_new_orlean.jpg" alt="постер" width="370" />
-            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-            <p class="text">Дизайн</p>
+            <h2 class="name-portfolio">Постер<span lang="en"> New Orlean vs Golden Star </span></h2>
+            <p class="text-portfolio">Дизайн</p>
           </li>
           <li>
             <img src="images/img_seafood.jpg" alt="ресторан" width="370" />
-            <h2 class="title">Ресторан Seafood</h2>
-            <p class="text">Додаток</p>
+            <h2 class="name-portfolio">Ресторан<span lang="en"> Seafood</span></h2>
+            <p class="text-portfolio">Додаток</p>
           </li>
           <li>
             <img src="images/img_prime.jpg" alt="prime" width="370" />
-            <h class="title"2>Проєкт Prime</h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="name-portfolio">Проєкт <span lang="en"> Prime</span></h2>
+            <p class="text-portfolio">Маркетинг</p>
           </li>
           <li>
             <img src="images/img_boxes.jpg" alt="boxes" width="370" />
-            <h class="title"2>Проєкт Boxes</h2>
-            <p class="text">Додаток</p>
+            <h2 class="name-portfolio">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="text-portfolio">Додаток</p>
           </li>
           <li>
             <img src="images/img_inspiration.jpg" alt="inspiration" width="370" />
-            <h2 class="title">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p>
+            <h2 lang="en" class="name-portfolio">Inspiration has no Borders</h2>
+            <p class="text-portfolio">Веб-сайт</p>
           </li>
           <li>
             <img src="images/img_limited_edition.jpg" alt="edition" width="370" />
-            <h2 class="title">Видання Limited Edition</h2>
-            <p class="text">Дизайн</p>
+            <h2 class="name-portfolio">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="text-portfolio">Дизайн</p>
           </li>
           <li>
             <img src="images/img_lab.jpg" alt="lab" width="370" />
-            <h2 class="title">Проєкт LAB</h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="name-portfolio">Проєкт<span lang="en"> LAB</span></h2>
+            <p class="text-portfolio">Маркетинг</p>
           </li>
           <li>
             <img src="images/img_growing_business.jpg" alt="growing business" width="370" />
-            <h2 class="title">Growing Business</h2>
-            <p class="text">Додаток</p>
+            <h2 lang="en" class="name-portfolio">Growing Business</h2>
+            <p class="text-portfolio">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer class="page-footer">
-      <a href="" class="link"
-        ><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a
-      >
+    <footer class="finish">
+      <a href="" class="link web">Web<span class="logo-studio-footer">Studio</span></a>
 
-      <address class="address">
+      <address>
         <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/cSazSaJ8c9VCCnmr8"
               target="_blank"
               rel="noopener noreferrer"
-              class="address-location"
+              class="link address-location"
               >м.Київ, пр-т Лесі Українки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link address">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
