--- a/index.html
+++ b/index.html
@@ -14,28 +14,27 @@
   <body>
     <!--Шапка сайту-->
     <header class="page-header">
-      <a href="" class="link"
-        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
-      >
+      <a href="" class="link web">Web<span class="logo-studio">Studio</span></a>
       <!-- Site nav -->
       <nav>
-        <ul class="site-nav list">
+        <ul class="list">
           <li><a href="" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="./portfolio.html" class="link site-nav">Портфоліо</a></li>
+          <li><a href="" class="link site-nav">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contact list">
+      <!-- Contact -->
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link contact">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!--Герой-->
-      <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для <br />вашого бізнесу</h1>
+      <section>
+        <h1 class="hero">Ефективні рішення для <br />вашого бізнесу</h1>
         <button type="button" class="button primary">Замовити послугу</button>
       </section>
       <!--Наші переваги-->
@@ -44,24 +43,30 @@
         <ul class="list">
           <li>
             <h3 class="section-title">Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
             <h3 class="section-title">Пунктуальність</h3>
-            <p>Завдання організації, обливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="text">
+              Завдання організації, обливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
             <h3 class="section-title">Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3 class="section-title">Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
       <!-- Work -->
-      <section class="work">
+      <section>
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="list">
           <li><img src="images/img_1.jpg" alt="клавіатура" width="370" /></li>
@@ -70,51 +75,49 @@
         </ul>
       </section>
       <!-- Team -->
-      <section class="about-team">
-        <h2 class="team">Наша команда</h2>
+      <section class="team">
+        <h2 class="about-team">Наша команда</h2>
         <ul class="list">
           <li>
             <img src="images/img1_1.jpg" alt="Фото Ігор" width="270" />
             <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p lang="en" class="team-proffesion"></p>Product Designer</p>
+            <p lang="en" class="team-proffesion">Product Designer</p>
           </li>
           <li>
             <img src="images/img2_1.jpg" alt="Фото Ольга" width="270" />
             <h3 class="team-title">Ольга Рєпіна</h3>
-            <p lang="en" class="team-proffesion"></p>Frontend Developer</p>
+            <p lang="en" class="team-proffesion">Frontend Developer</p>
           </li>
           <li>
             <img src="images/img3_1.jpg" alt="Фото Микола" width="270" />
             <h3 class="team-title">Микола Тарасов</h3>
-            <p lang="en" class="team-proffesion"></p>Marketing</p>
+            <p lang="en" class="team-proffesion">Marketing</p>
           </li>
           <li>
             <img src="images/img4_1.jpg" alt="Фото Михайло" width="270" />
             <h3 class="team-title">Михайло Єрмаков</h3>
-            <p lang="en" class="team-proffesion"></p>UI Designer</p>
+            <p lang="en" class="team-proffesion">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer class="page-footer">
-      <a href="" class="link"
-        ><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a
-      >
+    <footer class="finish">
+      <a href="" class="link web">Web<span class="logo-studio-footer">Studio</span></a>
 
-      <address class="address">
+      <address>
         <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/cSazSaJ8c9VCCnmr8"
               target="_blank"
               rel="noopener noreferrer"
-              class="address-location"
+              class="link address-location"
               >м.Київ, пр-т Лесі Українки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link address">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
